// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-euiCard-center"
>
  <div
    class="euiCard__main emotion-euiCard__main-vertical"
  >
    <div
      class="euiCard__content emotion-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title emotion-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="emotion-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText emotion-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <div
      class="emotion-euiCard__footer"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-isClickable-euiCard-center"
>
  <div
    class="euiCard__main emotion-euiCard__main-vertical"
  >
    <div
      class="euiCard__content emotion-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title emotion-euiTitle-s"
        id="generated-idTitle"
      >
        <a
          aria-describedby="generated-idDescription"
          class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
          href="#"
          rel="noreferrer"
        >
          Card title
        </a>
      </p>
      <div
        class="euiText emotion-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <div
      class="emotion-euiCard__footer"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props recommended 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-euiCard-center-hasBetaBadge"
>
  <div
    class="euiCard__main emotion-euiCard__main-vertical"
  >
    <div
      class="euiCard__content emotion-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title emotion-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="emotion-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText emotion-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
    <span
      class="emotion-euiCard__betaBadgeAnchor"
    >
      <span
        class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline-euiCard__betaBadge"
        id="generated-idBetaBadge"
        title="Recommended"
      >
        Recommended
      </span>
    </span>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-euiCard-center"
>
  <div
    class="euiCard__main emotion-euiCard__main-vertical"
  >
    <div
      class="euiCard__content emotion-euiCard__content-vertical"
    >
      <p
        class="euiTitle euiCard__title emotion-euiTitle-s"
        id="generated-idTitle"
      >
        <span
          class="emotion-euiCard__text-center"
        >
          Card title
        </span>
      </p>
      <div
        class="euiText emotion-euiText-s-euiCard__description"
        id="generated-idDescription"
      >
        <p>
          Description
        </p>
      </div>
    </div>
  </div>
</div>
`;
